--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,10 +34,10 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #32db64,
   secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
+  danger:     #32db64,
+  light:      #32db64,
   dark:       #222
 );
 
