--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,7 +36,7 @@ $app-direction: ltr;
 $colors: (
   primary:    #32db64,
   secondary:  #32db64,
-  danger:     #32db64,
+  danger:     #FF0000,
   light:      #32db64,
   dark:       #222
 );
