--- a/src/pages/test/test1/test1.scss
+++ b/src/pages/test/test1/test1.scss
@@ -1,10 +1,19 @@
-page-home {
-  .fab-btn {
-    position: absolute;
-    left:50%;
-    margin-left: -80px;
-    bottom: 10px;
-    z-index: 1;
-    text-align: center;
-  }
+
+page-test1 {
+.tab-red-point:after,.red-point:after{
+   position: absolute;
+  content: ' ';
+  height: 6px;
+  width: 6px;
+  border-radius: 3px;
+  background-color: red;
+}
+.tab-red-point:after{
+  top: 7px;
+  right: 24%;
+}
+.red-point:after{
+  top: 10px;
+  right: 35%;
+}
 }
