--- a/src/pages/test/test.scss
+++ b/src/pages/test/test.scss
@@ -11,11 +11,23 @@
     text-indent: 0;
     line-height: 20px;
     background-image:url(/assets/img/jiahao.png); 
-    height: 70px;
-    width: 70px;
-    float:left;
+    align-content: center;
+    height: 60px;
+    width: 60px;
     vertical-align:middle;
-    margin-top: 15px;
+    margin-top: 10px;
+   // margin-left: 10px;
+    background-size: cover;
+   
+}
+hr{
+    width: 98%;
+}
+ textarea{       
+    line-height: 20px;
+    border: none; 
+    width: 98%;
+  
 }
 .file input {
     position: absolute;
@@ -26,24 +38,25 @@
 }
 
 #a1 {
-    width: 75px;
-    height: 75px;
+    width: 70px;
+    height: 70px;
     color: #fff;
     position: relative;
-    margin-top: 15px;
+    margin-top: 10px;
+  //  margin-left: 10px;
 }
 
-#a1:after {
-    content: attr(data-num);
-    line-height: 20px;
+.divafter {
+    color: #fff;
     text-align: center;
+    line-height: 20px;
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background-color: red;
-    position: absolute;
-    top: -9px;
-    right: 10px;
+    position: relative;
+    top: -80px;
+    right: -50px;           
 }
 
 .imgDiv .delete {
