--- a/src/pages/home/user-list-orders-info/user-list-orders-info.scss
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.scss
@@ -1,3 +1,12 @@
 page-user-list-orders-info {
-
+img{
+    width:70px;
+    height: 70px;
 }
+}
+
+.imgDiv{
+    float: left;
+    background-size: cover;
+    margin-left: 8px;
+}             
