--- a/src/pages/test/test.scss
+++ b/src/pages/test/test.scss
@@ -38,15 +38,30 @@ hr{
 }
 
 
-#a1 {
+.imgBadge{
     width: 70px;
     height: 70px;
     color: #fff;
     position: relative;
     margin-top: 10px;
-  //  margin-left: 10px;
 }
-
+.imgBadge:after {
+    content:attr(txt);
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: red;
+    position: absolute;
+    top: -5px;
+    right: -5px;       
+}
+.icons-star{
+    font-size: 30px;
+    color: #FFFF00;
+   }
 .divafter {
     color: #fff;
     text-align: center;
