--- a/src/pages/home/user-list-orders-info/user-list-orders-info.scss
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.scss
@@ -10,3 +10,18 @@ img{
     background-size: cover;
     margin-left: 8px;
 }             
+.cmt-list p {
+    padding-top: 3px
+}
+
+.cmt-list span {
+
+    color: #3b5384
+}
+.cmt-wrap {
+    width: 100%;
+    background-color: #eee
+}
+ion-input{
+    margin-left: 10px; 
+}
