--- a/src/pages/home/schedule-complaint/schedule-complaint.scss
+++ b/src/pages/home/schedule-complaint/schedule-complaint.scss
@@ -1,180 +1,4 @@
-.file {
-    position: relative;
-    display: inline-block;
-    background: #D0EEFF;
-    border: 1px solid #99D3F5;
-    border-radius: 4px;
-    padding: 4px 12px;
-    overflow: hidden;
-    color: #1E88C7;
-    text-decoration: none;
-    text-indent: 0;
-    line-height: 20px;
-    background-image:url(/assets/img/jiahao.png); 
-    align-content: center;
-    height: 60px;
-    width: 60px;
-    vertical-align:middle;
-    margin-top: 10px;
-   // margin-left: 10px;
-    background-size: cover;
-   
-}
-.file input {
-    position: absolute;
-    font-size: 100px;
-    right: 0;
-    top: 0;
-    opacity: 0;
-}
-hr{
-    width: 98%;
-}
- textarea{       
-    line-height: 20px;
-    border: none; 
-    width: 98%;
-  
-}
-
-
-.imgBadge{
-    width: 70px;
-    height: 70px;
-    color: #fff;
-    position: relative;
-    margin-top: 10px;
-}
-.imgBadge:after {
-    content:attr(txt);
-    color: #fff;
-    text-align: center;
-    line-height: 20px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: red;
-    position: absolute;
-    top: -5px;
-    right: -5px;       
-}
-.icons-star{
-    font-size: 30px;
-    color: red;
-   }
-.divafter {
-    color: #fff;
-    text-align: center;
-    line-height: 20px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: red;
-    position: relative;
-    top: -80px;
-    right: -50px;           
-}
-
-.imgDiv .delete {
-                position: absolute;
-                top: 0px;
-                right: 0px;
-                width: 50px;
-                height: 50px;
-                display: none;
-            }
-
-/////////////////////////////////////////////////////////////
-
-        * {cursor: pointer;}
-        .weui_mask_transition {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0);
-            -webkit-transition: background .3s;
-            transition: background .3s;
-        }
-        .weui_fade_toggle {
-            background: rgba(0, 0, 0, 0.6);
-        }
-        .weui_actionsheet {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            -webkit-transform: translate(0, 100%);
-            -ms-transform: translate(0, 100%);
-            transform: translate(0, 100%);
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            z-index: 2;
-            width: 100%;
-            background-color: #EFEFF4;
-            -webkit-transition: -webkit-transform .3s;
-            transition: transform .3s;
-        }
-        .weui_actionsheet_toggle {
-            -webkit-transform: translate(0, 0);
-            -ms-transform: translate(0, 0);
-            transform: translate(0, 0);
-        }
-        .weui_actionsheet_menu {
-            background-color: #FFFFFF;
-        }
-        .weui_actionsheet_cell:before {
-            content: " ";
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 1px;
-            border-top: 1px solid #D9D9D9;
-            -webkit-transform-origin: 0 0;
-            -ms-transform-origin: 0 0;
-            transform-origin: 0 0;
-            -webkit-transform: scaleY(0.5);
-            -ms-transform: scaleY(0.5);
-            transform: scaleY(0.5);
-        }
-        .weui_actionsheet_cell:first-child:before {
-            display: none;
-        }
-        .weui_actionsheet_cell {
-            position: relative;
-            padding: 10px 0;
-            text-align: center;
-            font-size: 18px;
-        }
-        .weui_actionsheet_cell.title {
-            color: #999;
-        }
-        .weui_actionsheet_action {
-            margin-top: 6px;
-            background-color: #FFFFFF;
-        }
-
-.cmt-list {
-    padding: 5px 12px;
-    color: #454545
-}
-
-.cmt-list p {
-    padding-top: 3px
-}
-
-.cmt-list span {
-    color: #3b5384
-}
-.cmt-wrap {
-    width: 100%;
-    background-color: #eee
-}
-
-////////////
+page-schedule-complaint {
 html {  
     -ms-text-size-adjust: 100%;  
     -webkit-text-size-adjust: 100%;  
@@ -650,4 +474,5 @@ a.btn {
 }  
 ion-input{
     margin-left: 10px; 
+}
 }
