--- a/src/shared/upload-picture/upload-picture.scss
+++ b/src/shared/upload-picture/upload-picture.scss
@@ -4,20 +4,16 @@ page-upload-picture {
     position: relative;
     display: inline-block;
     background: #D0EEFF;
-    border: 1px solid #99D3F5;
-    border-radius: 4px;
-    padding: 4px 12px;
-    overflow: hidden;
-    color: #1E88C7;
+
+   
+
     text-decoration: none;
-    text-indent: 0;
-    line-height: 20px;
-    // background-image:url(/assets/img/jiahao.png); 
+
+    background-image:url(/assets/img/sc.jpg); 
     align-content: center;
 
     vertical-align:middle;
-    margin-top: 1px;
-   // margin-left: 10px;
+
     background-size: cover;
     }
 }
