--- a/src/pages/home/user-list-orders-info/user-list-orders-info.scss
+++ b/src/pages/home/user-list-orders-info/user-list-orders-info.scss
@@ -12,6 +12,18 @@ ion-input{
     margin-left: 8px;
     
 } 
+        .container{
+                position:relative;
+        }
+        .search{
+                background-image:url('assets/img/avatar-ts-jessie.png');
+                position:absolute;
+                width:50px;
+                height:50px;
+                top:4px;
+                left:100px;
+                z-index:99;
+        }
 }
 
             
